--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 
-    <article class="media content-section">
+    <!--article class="media content-section">
     <div>
       <a >This is a web application to analyze news articles and classify according to their fake content.
       It also describes the indicators used to evaluate the news</a>
     </div>
-    </article>
+    </article-->
    
     <div class="row">
     	<div class="col-sm-4 url"> News URL
