--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,42 @@
     <div class="header">
       <h1>Fake News</h1>
     </div>
+
+    <nav class="navbar navbar-expand-sm">
+      <!-- Brand -->
+
+      <!-- Links -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <img class="nav-link" src="static/Images/home.png" href="#" style= "width:40px; height:40px; text-align: center;" ></img>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Fact-checks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Evaluation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">How it works</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+
+        <!-- Dropdown -->
+        <!--li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Dropdown link
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Link 1</a>
+            <a class="dropdown-item" href="#">Link 2</a>
+            <a class="dropdown-item" href="#">Link 3</a>
+          </div>
+        </li-->
+      </ul>
+    </nav>
+
       {% block content %}{% endblock %}
     <div class="header notice">
       <h1>Notice: The purpose of this tool is to classify the news to help the consumers to judge the news and not to decide whether is True or False. </h1>
