--- a/static/main.css
+++ b/static/main.css
@@ -41,7 +41,7 @@ h2, h3, h4, h5, h6 {
 #hero {
 
   background: #213b52;
-  height: 1000px;
+  height: 700px;
 
 }
 
@@ -92,6 +92,11 @@ h2, h3, h4, h5, h6 {
   margin-top: 10px;
 }
 
+.evaluation_article .container{
+  margin-top: 10px;
+  margin-left: 8.5%;
+}
+
 .article .form-group .form-control{
   padding-bottom: 80px;
 }
@@ -113,15 +118,56 @@ h2, h3, h4, h5, h6 {
 }
 
 .content-section-result-metric {
-  background: #f0f8ff;
+  background: #ffffff;
   padding: 2px 20px;
   border: 1px solid #A9A9A9;
-  border-radius: 10px;
-  margin-bottom: 100px;
+  border-radius: 100px;
+  margin-bottom: 50px;
   width: 100%;
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 60px;
+}
+
+.content-section-evaluation {
+  background: #ffffff;
+  padding: 8px 20px;
+  border: 1px solid #A9A9A9;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-top: 5%;
+  width: 70%;
+  margin-right: auto;
+  margin-left: 10%;
+  -webkit-box-shadow: 0px 0px 19px 4px rgba(150,141,150,1);
+  -moz-box-shadow: 0px 0px 19px 4px rgba(150,141,150,1);
+  box-shadow: 0px 0px 19px 4px rgba(150,141,150,1);
+}
+
+.collapsible {
+  background-color: #A9A9A9;
+  color: black;
+  cursor: pointer;
+  padding: 15px;
+  width: 90%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin-bottom: 0em;
+  padding: 11px 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #f1f1f1;
 }
 
 .title{
@@ -147,6 +193,28 @@ h2, h3, h4, h5, h6 {
   text-overflow: ellipsis;
   font-family: Arial, Helvetica, sans-serif;
 
+}
+
+.content-section-evaluation .article_size {
+  display: block;
+  width: auto;
+  height: 280px;
+  overflow: scroll;
+  white-space: normal;
+  text-overflow: ellipsis;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.evaluation_article{
+  float: left;
+  max-width: 60%;
+}
+
+.evaluation_metrics{
+  float: left;
+  max-width: 40%;
+  margin-top: 3%;
 }
 
 .link-button{
@@ -236,7 +304,10 @@ h2, h3, h4, h5, h6 {
   color: black;
   text-align: center;
   font-size: 15px;
-  margin-bottom: auto;
+  position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
 }
 
 .progress-bar{
@@ -257,6 +328,15 @@ h2, h3, h4, h5, h6 {
   height: 25px;
   width: 25px;
   border-radius: 50%;
+}
+
+.evaluation_metrics .dot {
+  margin-top: 8px;
+  margin-left: 10px;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  float: left;
 }
 
 .source{
